# deer-code

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  langgraph.json  pyproject.toml
docs/: welcome.md
src/deer_code/: __init__.py  main.py  project.py
src/deer_code/agents/: __init__.py  coding_agent.py  state.py
src/deer_code/cli/: app.py  theme.py
src/deer_code/cli/components/chat/: chat_view.py  message_item_view.py  message_list_view.py
src/deer_code/cli/components/editor/: code_view.py  editor_tabs.py
src/deer_code/cli/components/terminal/: terminal_view.py
src/deer_code/cli/components/todo/: todo_list_view.py
src/deer_code/config/: config.py
src/deer_code/editors/: __init__.py
src/deer_code/models/: __init__.py  chat_model.py
src/deer_code/prompts/: template.py
src/deer_code/prompts/templates/: coding_agent.md
src/deer_code/terminals/: __init__.py
src/deer_code/todo/: __init__.py  types.py
src/deer_code/tools/: __init__.py  bash_tool.py  reminders.py  text_editor_tool.py  todo_write_tool.py
src/deer_code/tools/edit/: __init__.py  text_editor.py  tool.py
src/deer_code/tools/fs/: grep.py  ls.py  tree.py
src/deer_code/tools/mcp/: load_mcp_tools.py
src/deer_code/tools/terminal/: bash_terminal.py  tool.py
src/deer_code/tools/todo/: __init__.py  tool.py  types.py
