[project]
name = "deer-code"
version = "0.1.0"
description = "A minimalist yet sufficient project for enabling everyone to learn how to develop an AI Coding Agent."
readme = "README.md"
authors = [
    { name = "Henry Li", email = "henry1943@163.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.10",
    "pexpect>=4.9.0",
    "pydantic>=2.12.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
deer-code = "deer_code.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
